--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Airspace
+title: HLC
 permalink: /
 ---
 
@@ -133,8 +133,8 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>Started in 2016, HLC has regional offices in six strategic innovation centers across the United States.</h2>
-          <p>DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</p>
+          <p>Started in 2016, HLC has regional offices in six strategic innovation centers across the United States.</p>
+          <h2>DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h2>
           <a class="btn btn-default btn-call-to-action" href="contact" >Contact Us</a>
         </div>
       </div>
