--- a/work.html
+++ b/work.html
@@ -17,64 +17,82 @@ permalink: /work/
         </div>
     </div>
 </section>
-    <!-- Portfolio Start -->
+
+<!-- Portfolio Start -->
 <section id="portfolio-work">
     <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="block">
+              <div class="portfolio-menu">
+                <ul>
+                    <li class="filter" data-filter="all">Everything</li>
+                    <li class="filter" data-filter=".Branding">Branding</li>
+                    <li class="filter" data-filter=".Websites">Websites</li>
+                    <li class="filter" data-filter=".Graphic">Graphic</li>
+                    <li class="filter" data-filter=".design">design</li>
+                    <li class="filter" data-filter=".Video">Video</li>
+                </ul>
+              </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
+                    <li class="mix Branding">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
-                            <h2>TeraSiS</h2>
+                          <h2>TeraSiS</h2>
                             <p>THz transceivers that are designed and built over CMOS mixed signal process to create a new school of imaging applications as well as gas analysis semi-medical grade solutions.</p>
                           </div>
                         </div>
                       </a>
+                  </li>
+                  <li class="mix Websites">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>RiC Semiconductor</h2>
+                         <h2>RiC Semiconductor</h2>
                           <p>Millimeter wave chipsets which offer a category of product lines critical for 5G wireless communication, ADAS/autonomous car radar, and high resolution of object imaging.</p>
-
                         </div>
                       </div>
                     </a>
+                  </li>
+                  <li class="mix Graphic">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>AgriSense</h2>
                           <p>Wireless rumen bolus using proprietary ISFET pH sensing to offer real-time tracking of pH, body temperature, mobility, etc... for monthly fixed fee paying dairy farmers.</p>
-
                         </div>
                       </div>
 
                     </a>
+                  </li>
+                  <li class="mix design">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Reach Surgical</h2>
                           <p>Advanced medical devices and equipment for surgical procedures through its product development centers manufacturing bases in both USA and China.</p>
-
                         </div>
                       </div>
                     </a>
+                  </li>
+                  <li class="mix Video">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Greensand Network</h2>
-                          <p>Innovative IC chipsets to make optical 100G transceiver smaller, cheaper, less power consuming, and scalable to any of its multiples up to 800Gbits/s.</p>
-
+                          <h2>Reach Surgical</h2>
+                          <p>Advanced medical devices and equipment for surgical procedures through its product development centers manufacturing bases in both USA and China.</p>
                         </div>
                       </div>
                     </a>
+                  </li>
+                  <li class="mix Graphic">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
@@ -85,6 +103,7 @@ permalink: /work/
                         </div>
                       </div>
                     </a>
+                  </li>
                 </ul>
               </div>
             </div>
