--- a/work.html
+++ b/work.html
@@ -27,16 +27,14 @@ permalink: /work/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".Technology">Technology</li>
+                    <li class="filter" data-filter=".Healthcare">Healthcare</li>
+                    <li class="filter" data-filter=".Energy">Energy</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix Technology">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -47,7 +45,7 @@ permalink: /work/
                         </div>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix Energy">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
@@ -58,7 +56,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Technology">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
@@ -70,7 +68,7 @@ permalink: /work/
 
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix Healthcare">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -81,7 +79,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Video">
+                  <li class="mix Healthcare">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
@@ -92,7 +90,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Healthcare">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
