--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ permalink: /
 <section id="feature">
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-6">
+    <div class="col-md-6">
       <h2>STRATEGIC ADVANTAGE</h2>
       <p>Founders with strong business connections in US and China.</p>
       <p>Represents several China A-listed companies for global acquisitions.</p>
