--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
           <h1 class="animated fadeInUp">Happy Life Capital, LLC</h1>
-          <p class="animated fadeInUp">HLC is a new private equity international Global Opportunity Fund</p>
+          <p class="animated fadeInUp">A new private equity International Global Opportunity Fund</p>
         </div>
       </div>
     </div>
