--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@ permalink: /
 <section id="intro">
   <div class="container">
     <div class="row">
-      <div class="col-md-7 col-sm-12">
+      <div class="col-md-12 col-sm-7">
+        <div class="col-md-12 col-sm-5">
         <div class="block">
-          <div class="section-title">
+          <img src="img/wrapper-img.png" alt="Img">
+        </div>
+      </div>
+      </div><!-- .col-md-12 close -->
+      <div class="block">
+          <div class="section-title col-md-offset-6">
             <h2>About Us</h2>
             <p>We invest in Technology, Healthcare, and Energy.</p>
           </div>
@@ -31,12 +37,7 @@ permalink: /
           <p>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</p>
           <p>We look for large market opportunities with a clear opportunity for traction and exit.</p>
         </div>
-      </div><!-- .col-md-7 close -->
-      <div class="col-md-5 col-sm-12">
-        <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
-        </div>
-      </div><!-- .col-md-5 close -->
+      <!-- .col-md-5 close -->
     </div>
   </div>
 </section>
