--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ permalink: /
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="block">
-          <div class="section-title col-md-offset-6">
+          <img src="img/wrapper-img.png" alt="Img">
+        <!-- .col-md-7 close -->
+      <div class="col-md-5 col-sm-12">
+        <div class="block">
+        <div class="section-title">
             <h2>About Us</h2>
             <p>We invest in Technology, Healthcare, and Energy.</p>
           </div>
@@ -32,10 +36,7 @@ permalink: /
             <p>We look for large market opportunities with a clear opportunity for traction and exit.</p>
           </div>
         </div>
-        <!-- .col-md-7 close -->
-      <div class="col-md-5 col-sm-12">
-        <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
+          
         </div>
       </div><!-- .col-md-5 close -->
     </div>
@@ -49,7 +50,7 @@ permalink: /
       <h2>STRATEGIC ADVANTAGE</h2>
       <p>Founders with strong business connections in US and China.</p>
       <p>Represents several China A-listed companies for global acquisitions.</p>
-      <p>Technical collaboration with major universities and research labs such as MIT, STanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
+      <p>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
       <p>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</p>
       <p>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</p>
       <p>China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
