--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ permalink: /
 <section id="intro">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 col-sm-12">
+      <div class="col-sm-12 col-md-5">
         <div class="block">
           <img src="img/wrapper-img.png" alt="Img">
         <!-- .col-md-7 close -->
