--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@ permalink: /
             <h2>About Us</h2>
             <p>We invest in Technology, Healthcare, and Energy.</p>
           </div>
-            <p>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</p>
-            <p>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</p>
-            <p>We look for large market opportunities with a clear opportunity for traction and exit.</p>
+            <p>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>We look for large market opportunities with a clear opportunity for traction and exit.</p>
           </div>
         </div>
           
@@ -49,12 +47,12 @@ permalink: /
   <div class="row">
     <div class="col-md-6">
       <h2>STRATEGIC ADVANTAGE</h2>
-      <p>Founders with strong business connections in US and China.</p>
-      <p>Represents several China A-listed companies for global acquisitions.</p>
-      <p>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
-      <p>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</p>
-      <p>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</p>
-      <p>China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
+      <p>- Founders with strong business connections in US and China.</p>
+      <p>- Represents several China A-listed companies for global acquisitions.</p>
+      <p>- Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
+      <p>- Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</p>
+      <p>- Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</p>
+      <p>- China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
       <a href="work" class="btn btn-view-works">View Portfolio</a>
     </div>
   </div>
