--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ permalink: /
             <h2>About Us</h2>
             <p>We invest in Technology, Healthcare, and Energy.</p>
           </div>
-            <p>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>We look for large market opportunities with a clear opportunity for traction and exit.</p>
+            <p>- Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>- Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>- We look for large market opportunities with a clear opportunity for traction and exit.</p>
           </div>
         </div>
           
@@ -45,7 +45,7 @@ permalink: /
 <section id="feature">
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-7">
       <h2>STRATEGIC ADVANTAGE</h2>
       <p>- Founders with strong business connections in US and China.</p>
       <p>- Represents several China A-listed companies for global acquisitions.</p>
