--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ permalink: /
 <section id="feature">
 <div class="container">
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-7 col-md-offset-6">
       <h2>STRATEGIC ADVANTAGE</h2>
       <p>- Founders with strong business connections in US and China.</p>
       <p>- Represents several China A-listed companies for global acquisitions.</p>
