--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ permalink: /contact/
       <div class="col-md-12">
         <div class="block">
           <h1>Drop Us A Note</h1>
-          <p>Don’t just take our word for it. Check out some of our latest work.</p>
+          <p>Happy Life Capital has regional offices in six strategic cities in the United States. Over 80% of the private equity deal flow comes through one of these cities. If you have an opportunity that meets our criteria, we encourage you to reacn out to us.</p>
         </div>
       </div>
     </div>
@@ -50,42 +50,16 @@ permalink: /contact/
     <div id="contact-box" class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
-          <h2>Stop By For A visit</h2>
+          <h2>Contact</h2>
           <ul class="address-block">
             <li>
-              <i class="fa fa-map-marker"></i>North Main Street,Brooklyn Australia
+              <i class="fa fa-map-marker"></i>Dallas, Texas
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: contact@mail.com
-            </li>
-            <li>
-              <i class="fa fa-phone"></i>Phone:+88 01672 506 744
+              <i class="fa fa-envelope-o"></i>Email: opportunities@happylifecapital.com
             </li>
           </ul>
-
-          <ul class="social-icons">
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-pinterest"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-dribbble"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-behance"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
-            </li>
-          </ul>
+          <h3>We also are focused on large market opportunities in China and India</h3>
         </div>
       </div>
       <div class="col-md-6 col-sm-12">
