--- a/work.html
+++ b/work.html
@@ -84,8 +84,8 @@ permalink: /work/
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Reach Surgical</h2>
-                          <p>Advanced medical devices and equipment for surgical procedures through its product development centers manufacturing bases in both USA and China.</p>
+                          <h2>Greensand Network</h2>
+                          <p>Innovative IC chipsets to make optical 100G transceiver smaller, cheaper, less power consuming, and scalable to any of its multiples up to 800Gbits/s.</p>
                         </div>
                       </div>
                     </a>
