--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ permalink: /contact/
       <div class="col-md-12">
         <div class="block">
           <h1>Drop Us A Note</h1>
-          <p>Happy Life Capital has regional offices in six strategic cities in the United States. Over 80% of the private equity deal flow comes through one of these cities. If you have an opportunity that meets our criteria, we encourage you to reacn out to us.</p>
+          <p>Happy Life Capital has regional offices in six strategic cities in the United States. Over 80% of the private equity deal flow comes through these cities. If you have an opportunity that meets our criteria, we encourage you to reach out to us.</p>
         </div>
       </div>
     </div>
@@ -72,9 +72,9 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <p>Started in 2016, HLC has regional offices in six strategic innovation centers across the United States.</p>
+          <h3>DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h3>
+          <a class="btn btn-default btn-call-to-action" href="contact" >Contact Us</a>
         </div>
       </div>
     </div>
