--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@ permalink: /
   <div class="row">
     <div class="col-md-7 col-md-offset-6">
       <h2>STRATEGIC ADVANTAGE</h2>
-      <p>- Founders with strong business connections in US and China.</p>
-      <p>- Represents several China A-listed companies for global acquisitions.</p>
-      <p>- Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
-      <p>- Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</p>
-      <p>- Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</p>
-      <p>- China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
+      <ul>
+      <li>Founders with strong business connections in US and China.</li>
+      <li>Represents several China A-listed companies for global acquisitions.</li>
+      <li>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</li>
+      <li>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</li>
+      <li>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</li>
+      <li>China based LP owns over two dozens of public listed companies and has strong financial resources.</li>
+      </ul>
       <a href="work" class="btn btn-view-works">View Portfolio</a>
     </div>
   </div>
@@ -67,7 +69,15 @@ permalink: /
         <div class="section-title">
             <h2>Our Focus</h2>
           </div>
-            <p>Our goal is to provide substantial returns primarily by M&ampA to entrepreneurs, employees, and investors in selective investment into tech firms in which we focus on building long-term sustainable value in the wake of global economical changes and US/China industrial shifts</p>
+            <p>Our goal is to provide substantial returns primarily by M&ampA to entrepreneurs, employees, and investors in selective investment into tech firms in which we focus on building long-term sustainable value in the wake of global economical changes and US/China industrial shifts.</p>
+            <i>Our Investment Direction</i>
+            <ul>
+              <li>Medical devices, sensors, and digital and personla healthcare</li>
+              <li>AI data analytics instantly powerful for any ready killer applications</li>
+              <li>Automations, smart manufacturing, +Internet &amp +AI</li>
+              <li>IC chips &amp AI software to enable new application &amp infrastructure</li>
+              <li>Bio chips and nano material technology</li>
+            </ul>
           </div>
         </div>
           
