--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ permalink: /
             <h2>About Us</h2>
             <p>We invest in Technology, Healthcare, and Energy.</p>
           </div>
-            <p>- Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>- Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>- We look for large market opportunities with a clear opportunity for traction and exit.</p>
+            <p>>>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>>>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>>> We look for large market opportunities with a clear opportunity for traction and exit.</p>
           </div>
         </div>
           
@@ -47,14 +47,12 @@ permalink: /
   <div class="row">
     <div class="col-md-7 col-md-offset-6">
       <h2>STRATEGIC ADVANTAGE</h2>
-      <ul>
-      <li>Founders with strong business connections in US and China.</li>
-      <li>Represents several China A-listed companies for global acquisitions.</li>
-      <li>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</li>
-      <li>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</li>
-      <li>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</li>
-      <li>China based LP owns over two dozens of public listed companies and has strong financial resources.</li>
-      </ul>
+      <p>>>Founders with strong business connections in US and China.</p>
+      <p>>>Represents several China A-listed companies for global acquisitions.</p>
+      <p>>>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
+      <p>>>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</p>
+      <p>>>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</p>
+      <p>>>China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
       <a href="work" class="btn btn-view-works">View Portfolio</a>
     </div>
   </div>
