--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@ permalink: /
   <div class="row">
     <div class="col-md-7 col-md-offset-6">
       <h2>STRATEGIC ADVANTAGE</h2>
-      <p>>>Founders with strong business connections in US and China.</p>
-      <p>>>Represents several China A-listed companies for global acquisitions.</p>
-      <p>>>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.</p>
-      <p>>>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.</p>
-      <p>>>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).</p>
-      <p>>>China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
+      <p>>>Founders with strong business connections in US and China.<br>>>Represents several China A-listed companies for global acquisitions.<br>>>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.<br>>>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.<br>>>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).<br>>>China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
       <a href="work" class="btn btn-view-works">View Portfolio</a>
     </div>
   </div>
