--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ permalink: /
             <p>Our goal is to provide substantial returns primarily by M&ampA to entrepreneurs, employees, and investors in selective investment into tech firms in which we focus on building long-term sustainable value in the wake of global economical changes and US/China industrial shifts.</p>
             <i>Our Investment Direction</i>
             <ul>
-              <li>Medical devices, sensors, and digital and personla healthcare</li>
-              <li>AI data analytics instantly powerful for any ready killer applications</li>
-              <li>Automations, smart manufacturing, +Internet &amp +AI</li>
-              <li>IC chips &amp AI software to enable new application &amp infrastructure</li>
-              <li>Bio chips and nano material technology</li>
+              <li>>>Medical devices, sensors, and digital and personla healthcare</li>
+              <li>>>AI data analytics instantly powerful for any ready killer applications</li>
+              <li>>>Automations, smart manufacturing, +Internet &amp +AI</li>
+              <li>>>IC chips &amp AI software to enable new application &amp infrastructure</li>
+              <li>>>Bio chips and nano material technology</li>
             </ul>
           </div>
         </div>
