--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ permalink: /
             <h2>About Us</h2>
             <p>We invest in Technology, Healthcare, and Energy.</p>
           </div>
-            <p>>>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>>>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>>> We look for large market opportunities with a clear opportunity for traction and exit.</p>
+            <p>> Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</br>> Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</br>>  We look for large market opportunities with a clear opportunity for traction and exit.</p>
           </div>
         </div>
           
@@ -47,7 +47,7 @@ permalink: /
   <div class="row">
     <div class="col-md-7 col-md-offset-6">
       <h2>STRATEGIC ADVANTAGE</h2>
-      <p>>>Founders with strong business connections in US and China.<br>>>Represents several China A-listed companies for global acquisitions.<br>>>Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.<br>>>Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.<br>>>Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).<br>>>China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
+      <p>> Founders with strong business connections in US and China.<br>> Represents several China A-listed companies for global acquisitions.<br>> Technical collaboration with major universities and research labs such as MIT, Stanford, UTD, Harvard, Quinghua, Nankai, and Zhejiang University.<br>> Tens of global experienced resident CEOs to help entrepreneurs to manage and to grow.<br>> Deal sharing with Chinese Mega funds (¥350B Chengtong Fund, ¥200B Guoxing Fund, etc).<br>> China based LP owns over two dozens of public listed companies and has strong financial resources.</p>
       <a href="work" class="btn btn-view-works">View Portfolio</a>
     </div>
   </div>
@@ -65,11 +65,11 @@ permalink: /
             <p>Our goal is to provide substantial returns primarily by M&ampA to entrepreneurs, employees, and investors in selective investment into tech firms in which we focus on building long-term sustainable value in the wake of global economical changes and US/China industrial shifts.</p>
             <i>Our Investment Direction</i>
             <ul>
-              <li>>>Medical devices, sensors, and digital and personla healthcare</li>
-              <li>>>AI data analytics instantly powerful for any ready killer applications</li>
-              <li>>>Automations, smart manufacturing, +Internet &amp +AI</li>
-              <li>>>IC chips &amp AI software to enable new application &amp infrastructure</li>
-              <li>>>Bio chips and nano material technology</li>
+              <li>> Medical devices, sensors, and digital and personla healthcare</li>
+              <li>> AI data analytics instantly powerful for any ready killer applications</li>
+              <li>> Automations, smart manufacturing, +Internet &amp +AI</li>
+              <li>> IC chips &amp AI software to enable new application &amp infrastructure</li>
+              <li>> Bio chips and nano material technology</li>
             </ul>
           </div>
         </div>
