--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@ permalink: /team/
         <!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="img/chao.png" alt="Jessy Chao" href="mailto:jessy_chao@happylifecapital.com">
+          <img src="img/chao.jpg" alt="Jessy Chao" href="mailto:jessy_chao@happylifecapital.com">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
@@ -67,7 +67,7 @@ permalink: /team/
         <!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="/img/mao.png" alt="Charles Mao" href="mailto:charles_mao@happylifecapital.com">
+          <img src="/img/mao.jpg" alt="Charles Mao" href="mailto:charles_mao@happylifecapital.com">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
