--- a/team.html
+++ b/team.html
@@ -67,7 +67,7 @@ permalink: /team/
         <!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="/img/mao.jpg" alt="Charles Mao" href="mailto:charles_mao@happylifecapital.com">
+          <img src="img/mao.jpg" alt="Charles Mao" href="mailto:charles_mao@happylifecapital.com">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
