--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ permalink: /
       <div class="col-md-5 col-sm-12">
         <div class="block">
         
-          <img src="img/wrapper-img.png" alt="Img">
+          <img src="img/about.jpg" alt="Img">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
@@ -78,7 +78,7 @@ permalink: /
       <div class="col-md-5 col-sm-12">
         <div class="block">
         
-          <img src="img/wrapper-img.png" alt="Img">
+          <img src="img/focus.jpg" alt="Img">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
