--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@ permalink: /team/
       <div class="col-md-7 col-sm-12">
         <div class="block">
         <div class="section-title">
-            <h2>Jessy Chao</br></h2>
+            <h2>Jessy Chao</h2>
             <ul>
               <li>> Founder of Avanex (now Ociaro)</li>
               <li>> Entrepreneur in US and China</li>
@@ -51,7 +51,7 @@ permalink: /team/
       <div class="col-md-7 col-sm-12">
         <div class="block">
         <div class="section-title">
-            <h2>Charles Mao</br></h2>
+            <h2>Charles Mao</h2>
             <ul>
               <li>> Founder of Avanex (now Ociaro) and Arasor</li>
               <li>> Angel investor in US and China, return over 50x</li>
