--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@ permalink: /work/
             <div class="col-md-12">
                 <div class="block">
                     <h1>INVESTMENT PORTFOLIO</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <p>Here are some of our recent investments.</p>
                 </div>
             </div>
         </div>
