--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 ---
 layout: page
-title: Happy Life Capital
+title: Happy Life Capital, LLC.
 subtitle: HLC is a new private equity International Global Opportunity Fund
 use-site-title: true
 ---
 <div class="posts-list">
   <h1 class="pageTitle">Happy Life Capital, LLC.</h1>
-  <p class="intro">HLC is a new private equity International Global Opportunity Fund</p>
-  <p>We invest in technology, Healthcare, and Energy.</p>
-  <p>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</p>
-  <p>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</p>
-  <p>We look for large market opportunities with a clear opportunity for traction and exit.</p>
+  <ul>
+	  <li>HLC is a new private equity International Global Opportunity Fund</li>
+	  <li>We invest in technology, Healthcare, and Energy.</li>
+	  <li>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</li>
+	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
+	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
 </div>
