--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
----
-layout: page
-title: Happy Life Capital, LLC.
-subtitle: HLC is a new private equity International Global Opportunity Fund
-use-site-title: true
----
+
 <div class="posts-list">
+	<h2>Happy Life Capital, LLC.</h2>
+	<h3>HLC is a new private equity International Global Opportunity Fund</h3> 
   <ul>
-	  <li>HLC is a new private equity International Global Opportunity Fund</li>
 	  <li>We invest in technology, Healthcare, and Energy.</li>
 	  <li>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</li>
 	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
