--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+---
+layout: base
+---
 
-<div class="posts-list">
+{% include header.html type="page" %}
+
+<div class="container" role="main">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-2">
+      <div class="posts-list">
 	<h2>Happy Life Capital, LLC.</h2>
 	<h3>HLC is a new private equity International Global Opportunity Fund</h3> 
   <ul>
@@ -8,3 +16,8 @@
 	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
 	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
 </div>
+    </div>
+  </div>
+</div>
+
+
