--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ layout: base
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-2">
-      <div class="posts-list">
-	<h2>Happy Life Capital, LLC.</h2>
+	<h1 align="center">Happy Life Capital, LLC.</h1>
 	<h3>HLC is a new private equity International Global Opportunity Fund</h3> 
   <ul>
 	  <li>We invest in technology, Healthcare, and Energy.</li>
