--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: base
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-2">
 	<h1 align="center">Happy Life Capital, LLC.</h1>
-	<h3>HLC is a new private equity International Global Opportunity Fund</h3> 
+	<h4 align="center">HLC is a new private equity International Global Opportunity Fund</h4> 
   <ul>
 	  <li>We invest in technology, Healthcare, and Energy.</li>
 	  <li>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</li>
