--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ layout: base
 	  <li>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</li>
 	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
 	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
+</ul>
+<h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
+<p>Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. Over 80% of private equity deal flow comes through these cities.</p>
+<p>We also focus on emerging markets and opportunities in India and China</p>
 </div>
     </div>
   </div>
