--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@ layout: base
 	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
 	  <li>We look for large market opportunities with a clear opportunity for traction and exit.</li>
 </ul>
-</div>
-</div>
-</div>
-<div class="container" role="main">
-  <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-2">
+<hr>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
-<p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. Over 80% of private equity deal flow comes through these cities.</p>
+<p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. </p>
+<p align="center">Over 80% of private equity deal flow comes through these cities.</p>
 <p align="center">We also focus on emerging markets and opportunities in India and China</p>
 </div>
     </div>
