--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@ layout: base
 <hr>
 <br>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
-<p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. </p>
-<p align="center">Over 80% of private equity deal flow comes through these cities.</p>
-<p align="center">We also focus on emerging markets and opportunities in India and China</p>
+<p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. <br>Over 80% of private equity deal flow comes through these cities.<br>We also focus on emerging markets and opportunities in India and China.</p>
 </div>
     </div>
   </div>
