--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ layout: base
 <hr>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
 <p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. <br>Over 80% of private equity deal flow comes through these cities.<br>We also focus on emerging markets and opportunities in India and China.</p>
-        <p>CONTACT</p>
-        <h4 align = "left">Jessy_Chao@happylifecapital.com</h4><h4 align="left">Charles_Mao@happylifecapital.com</h4>
+        <p align-"center">CONTACT</p>
+        <h4 align = "left">Jessy_Chao@happylifecapital.com</h4><h4 align="right">Charles_Mao@happylifecapital.com</h4>
 </div>
     </div>
   </div>
