--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ layout: base
 <hr>
 <h4 align="center">DALLAS | SAN FRANCISCO | CHICAGO | PITTSBURGH | BOSTON | NEW YORK</h4>
 <p align="center">Started in 2016 in Dallas, HLC has regional offices in six strategic innovation centers across the United States. <br>Over 80% of private equity deal flow comes through these cities.<br>We also focus on emerging markets and opportunities in India and China.</p>
-        <h3 align-"center">CONTACT</h3>
-        <h4 align = "center">Jessy_Chao@happylifecapital.com                                       Charles_Mao@happylifecapital.com</h4>
+        <h3 align="center">CONTACT</h3>
+        <h4 align="center">Jessy_Chao@happylifecapital.com                                       Charles_Mao@happylifecapital.com</h4>
 </div>
     </div>
   </div>
