--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ layout: base
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-2">
 	<h1 align="center">Happy Life Capital, LLC.</h1>
 	<h4 align="center">HLC is a new private equity International Global Opportunity Fund</h4> 
-  <ul>
+    <img align="left" src="/img/HLC.png" alt="text">
+  <ul align="right">
 	  <li>We invest in technology, Healthcare, and Energy.</li>
 	  <li>Our strategic areas of interest are AI, IT, Analytics, Integrated Networking, and Big Data.</li>
 	  <li>Our focus is on Data Management and Interpretation, Intelligent Software Platforms, Interactive and Ambulatory Robotics, Advanced Personalized Healthcare, and Efficient, Sustainable Energy.</li>
